# white_identity_sources

./: .gitignore  .renvignore  README.md  pyproject.toml
assets/: references.bib  wid.bib
code/: cleaning-2012-anes.R  cleaning-2016-anes.R  cleaning-2018-anes.R  cleaning-2019-anes.R  cleaning-census-pop-estimates.R  cleaning_12_anes_gini.R  cleaning_12_anes_income_race.R  cleaning_16_anes_gini.R  cleaning_2012_anes_race.R  cleaning_2012_anes_urban.R  cleaning_2012_poverty.R  cleaning_2016_anes_income_race.R  cleaning_2016_anes_race.R  cleaning_2016_anes_urban.r  cleaning_2016_income.R  cleaning_2016_poverty.R  cleaning_anes_2012_income.R  context_analysis.R  dcr_anes_2012_cleaning.R  dcr_anes_2016_cleaning.R  dcr_anes_2020_cleaning.R  dcr_anes_2020_cleaning.r  dcr_anes_primary_analysis.R  dv-descriptives-index.R  personal-threats-index.R  personal-threats-setup-file.R  primary_analysis.R  timeseries-index.R  timeseries-setup.R
drafts/: dcr_white_identity_relative_deprivation_fa_2022.qmd
drafts/fa_2022/: dcr_white_identity_relative_deprivation_fa_2022.qmd
figures/: factor_loadings.html
src/: manuscript.qmd  model-fitting.R
src/R/: modelFitting.R  plot.R  stanPrep.R
src/data-ingestion/: data-preprocessing.R  ingestion.py
src/eda/: dcr_anes_2012_cleaning.R  dcr_anes_2016_cleaning.R  dcr_anes_2020_cleaning.R  dcr_anes_primary_analysis.R
src/models/: 2012-model.STAN  main-penalized-model.stan  model-checking.R  model-fitting.R  model_fitting.R  pca_models.R
src/old-drafts/: cut.txt  (+4 more)
tests/: test-single-df-prep.R  test-stan-prep.R
(+5 files in other folders)
