[tool.poetry]
name = "white-identity-sources"
version = "0.1.0"
description = ""
authors = ["DamonCharlesRoberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
